--- a/client/partials/test_start.html
+++ b/client/partials/test_start.html
@@ -15,84 +15,156 @@
     <link rel="stylesheet" href="../static/css/xt.css">
   </head>
   <body>
-    <div id="start" ng-click="toggleDropdown(1)">
+    <div id="start" ng-click="toggleDropdown($event, 1)">
+
       <nav>
-        <h1>Xpense Tracker</h1>
+        <h1 ng-click="goHome($event)">Xpense Tracker</h1>
         <div id="logout">
-          <div id="username" ng-model="userName" ng-click="toggleDropdown()"><i class="material-icons">&#xE851;</i>{{ userName }}</div>
-          <div id="dropdownList" ng-style="userDropdown">
-            <p ng-click="showProfile()">My Profile</p>
-            <p ng-click="resetPwd()">Reset Password</p>
-            <p ng-click="signOut()">Sign Out</p>
+          <div id="username" ng-model="user" ng-click="toggleDropdown($event)"><i class="material-icons">&#xE851;</i>{{ user }}</div>
+          <div id="dropdownList" ng-model="userDropdown" ng-style="userDropdown">
+            <p ng-click="showProfile($event)">My Profile</p>
+            <p ng-click="resetPwd($event)">Reset Password</p>
+            <p ng-click="signOut($event)">Sign Out</p>
           </div>
         </div>
       </nav>
+
       <div id="main">
         <div id="addNew">
           <ul>
-            <li ng-click="addNewSheet()"><span class="material-icons">&#xE146;</span>Add a New Sheet</li>
-            <li ng-click="addNewGroup()"><span class="material-icons">&#xE146;</span>Create a New Group</li>
+            <li ng-click="addNewSheet()"><span class="material-icons">&#xE02E;</span>Add a New Sheet</li>
+            <li ng-click="addNewGroup()"><span class="material-icons">&#xE02E;</span>Create a New Group</li>
           </ul>
         </div>
-        <div id="mySheets">
+
+        <div id="mySheets" ng-model="showSheets" ng-show="showSheets">
+
           <div id="heading">
             <span class="material-icons">&#xE02F;</span>
-            <!-- <i class="material-icons">library_books</i> -->
             <h2>My Sheets</h2>
           </div>
+
           <div class="showMyContent">
-            <span class="material-icons" ng-show="prevSheet">&#xE408;</span>
+            <span class="material-icons" ng-show="prevSheet"  ng-click="showPrevSheet()">&#xE408;</span>
             <ul>
-              <li ng-show="sheet1">{{ sheet1 }}</li>
-              <li ng-show="sheet2">{{ sheet2 }}</li>
-              <li ng-show="sheet3">{{ sheet3 }}</li>
-              <li ng-show="sheet4">{{ sheet4 }}</li>
-              <li ng-show="sheet5">{{ sheet5 }}</li>
+              <li ng-repeat="idx in sheetIdxArr" ng-click="showSheet(sheets[idx])" ng-mouseenter="sheetMenu=true" ng-mouseleave="sheetMenu=false" ng-init="sheetMenu=false" ng-model="sheets[idx]['sheetName']">
+                <b ng-show="sheetMenu">
+                  <i class="material-icons" ng-mouseenter="editTT=true" ng-mouseleave="editTT=false" ng-init="editTT=false" ng-click="$event.stopImmediatePropagation(); renameSheet(sheets[idx], idx)">&#xE3C9;
+                    <i class="tooltip" ng-show="editTT">RENAME</i>
+                  </i>
+                  <i class="material-icons" ng-mouseenter="delTT=true" ng-mouseleave="delTT=false" ng-init="delTT=false" ng-click="$event.stopImmediatePropagation(); deleteSheet(sheets[idx], idx)">&#xE872;
+                    <i class="tooltip" ng-show="delTT">DELETE</i>
+                  </i>
+                  <i class="material-icons" ng-mouseenter="shrTT=true" ng-mouseleave="shrTT=false" ng-init="shrTT=false" ng-click="$event.stopImmediatePropagation(); shareSheet(sheets[idx])">&#xE80D;
+                    <i class="tooltip" ng-show="shrTT">SHARE</i>
+                  </i>
+                </b>
+                <i class="material-icons">&#xE896;</i>
+                {{ sheets[idx]['sheetName'] }}
+              </li>
             </ul>
-            <span class="material-icons" ng-show="nextSheet">&#xE409;</span>
+            <span class="material-icons" ng-show="nextSheet"  ng-click="showNextSheet()">&#xE409;</span>
           </div>
         </div>
-        <div id="myGroups">
+
+        <div id="myGroups" ng-model="showGroups" ng-show="showGroups">
+
           <div id="heading">
             <span class="material-icons">&#xE7EF;</span>
-            <!-- <span class="material-icons">group</span> -->
             <h2>My Groups</h2>
           </div>
+
           <div class="showMyContent">
-            <span class="material-icons" ng-show="prevGroup">&#xE408;</span>
+            <span class="material-icons" ng-show="prevGroup" ng-click="showPrevGroup()">&#xE408;</span>
             <ul>
-              <li ng-show="group1">{{ group1 }}</li>
-              <li ng-show="group2">{{ group2 }}</li>
-              <li ng-show="group3">{{ group3 }}</li>
-              <li ng-show="group4">{{ group4 }}</li>
-              <li ng-show="group5">{{ group5 }}</li>
+              <li ng-repeat="idx in groupIdxArr" ng-click="showGroup(groups[idx])" ng-mouseenter="groupMenu=true" ng-mouseleave="groupMenu=false" ng-init="groupMenu=false" ng-model="groups[idx]['groupName']">
+                <b ng-show="groupMenu">
+                  <i class="material-icons" ng-mouseenter="editTT=true" ng-mouseleave="editTT=false" ng-init="editTT=false" ng-click="$event.stopImmediatePropagation(); renameGroup(groups[idx], idx)">&#xE3C9;
+                    <i class="tooltip" ng-show="editTT">RENAME</i>
+                  </i>
+                  <i class="material-icons" ng-mouseenter="delTT=true" ng-mouseleave="delTT=false" ng-init="delTT=false" ng-click="$event.stopImmediatePropagation(); deleteGroup(groups[idx], idx)">&#xE872;
+                    <i class="tooltip" ng-show="delTT">DELETE</i>
+                  </i>
+                  <i class="material-icons" ng-mouseenter="shrTT=true" ng-mouseleave="shrTT=false" ng-init="shrTT=false" ng-click="$event.stopImmediatePropagation(); editGroup(groups[idx])">&#xE7FE;
+                    <i class="tooltip" ng-show="shrTT">EDIT</i>
+                  </i>
+                </b>
+                <i class="material-icons">&#xE7EF;</i>
+                {{ groups[idx]['groupName'] }}
+              </li>
             </ul>
-            <span class="material-icons" ng-show="nextGroup">&#xE409;</span>
+            <span class="material-icons" ng-show="nextGroup"  ng-click="showNextGroup()">&#xE409;</span>
           </div>
         </div>
       </div>
+
       <div id="addSheetOverlay" ng-style="displayAddSheet">
         <div id="addSheetScreen">
-          <span id="cancel" ng-click="close()">X</span>
+          <i id="cancel" ng-click="close()" class="material-icons">&#xE5CD;</i>
           <h2>XpenseTracker</h2>
           <span id="addSheetErr" ng-show="addSheet['err']">{{ addSheet['err'] }}</span>
           <form>
-            <input type="text" ng-style="snErr" ng-model="addSheet['userName']" placeholder="New Sheet Name" required>
-            <p id="button">Start Sheet</p>
+            <label>
+              <input type="text" ng-model="addSheet['sheetName']" placeholder="New Sheet Name" required>
+              <i class="material-icons" ng-show="err['sheetName']">&#xE002;</i>
+            </label>
+            <p class="button" ng-click="startSheet()" ng-show="sstartBtn">Start Sheet</p>
+            <p class="button" ng-click="updateSheet()" ng-show="srenameBtn">Save</p>
           </form>
         </div>
       </div>
+
       <div id="addGroupOverlay" ng-style="displayAddGroup">
         <div id="addGroupScreen">
-          <span id="cancel" ng-click="close()">X</span>
+          <i id="cancel" ng-click="close()" class="material-icons">&#xE5CD;</i>
           <h2>XpenseTracker</h2>
           <span id="addGroupErr" ng-show="addGroup['err']">{{ addGroup['err'] }}</span>
           <form>
-            <input type="text" ng-style="snErr" ng-model="addGroup['userName']" placeholder="New Group Name" required>
-            <p id="button">Create Group</p>
+            <label>
+              <input type="text" ng-model="addGroup['groupName']" placeholder="New Group Name" required><i class="material-icons" ng-show="err['groupName']">&#xE002;</i>
+            </label>
+            <div id="friends">
+              <label>
+                <span>Add Friends to Group
+                  <i class="material-icons" ng-show="err['groupFriend']">&#xE002;</i>
+                </span>
+                <input type="text" ng-model="addFriend" placeholder="Email Id of Friend">
+                <span class="material-icons" id="addFriend">&#xE146;</span>
+              </label>
+              <ul>
+                <li>
+                  <i class="material-icons">&#xE14C;</i>
+                  <i class="friendName">friend name</i>
+                </li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+                <li><i class="material-icons">&#xE14C;</i><i class="friendName">friend name</i></li>
+              </ul>
+            </div>
+            <label>Share a Sheet
+              <i class="material-icons">&#xE002;</i>
+            </label>
+            <select>
+              <option value="" selected="selected" hidden="hidden"></option>
+              <option value="">Sheet-1</option>
+              <option value="">Sheet-2</option>
+              <option value="">Sheet-3</option>
+              <option value="">Sheet-4</option>
+            </select>
+            <p class="button" ng-click="createGroup()" ng-show="gcreateBtn">Create Group</p>
+            <p class="button" ng-click="updateGroup()" ng-show="grenameBtn">Save</p>
           </form>
         </div>
       </div>
     </div>
+
   </body>
 </html>
